# lynx-dashboard

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  lynx-dashboard  lynx-dashboard.py  pyproject.toml  requirements.txt
.github/: PUBLISHING.md
docs/: API.md  ARCHITECTURE.md  DEVELOPMENT.md  KEYBINDINGS.md  TROUBLESHOOTING.md  completions.md
img/: logo_ascii.txt
lynx_dashboard/: __init__.py  __main__.py  api.py  cli.py  display.py  easter.py  history.py  icons.py  interactive.py  launcher.py  plugin_loader.py  recommender.py  registry.py  splash.py
lynx_dashboard/gui/: __init__.py  app.py
lynx_dashboard/tui/: app.py
tests/: test_about.py  test_api.py  test_cli.py  test_gui_helpers.py  test_history.py  test_info.py  test_launcher.py  test_plugins_integration.py  test_recommender.py  test_registry.py  test_splash.py
